# ramwise

./: Cargo.toml  README.md
examples/: check_smaps.rs  check_units.rs  debug_procfs.rs
src/: app.rs  config.rs  main.rs
src/analyzer/: engine.rs  insights.rs  mod.rs  rules.rs
src/collector/: mod.rs  procfs_collector.rs  types.rs
src/history/: buffer.rs  mod.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/ui/widgets/: detail_panel.rs  graph.rs  header.rs  insights_panel.rs  mod.rs  process_list.rs  system_bar.rs
src/utils/: format.rs  mod.rs
